[WIP] Upgrade to java 17.